--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
 <head>
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <!--*** This is a generated file.  Do not edit.  ***-->
-<link rel="stylesheet" href="test.css" type="text/css">
+<link rel="stylesheet" href="resume.css" type="text/css">
 <title>Yusuke Takamatsu</title>
 </head>
 <body bgcolor="white" class="composite" >
