--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <tr><td>
 <div align="center">
-  EMail: yusuke (at) sslab.ics.keio.ac.jp
+  EMail: yusuke@sslab.ics.keio.ac.jp
 </div>
 <hr>
 </td></tr>
