--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <tr><td>
 <div align="center">
-  EMail: <a href="mailto:utatane.tea@gmail.com">yusuke@sslab.ics.keio.ac.jp</a>
+  EMail: <a href="mailto:utatane.tea@gmail.com">yusuke@sslab.ics.keio.ac.jp</a> / <a href="mailto:sleepingforest03@gmail.com">sleepingforest03@gmail.com</a>
 </div>
 <hr>
 </td></tr>
