--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <em>
 <pauthor>Yusuke Takamatsu and Kenji Kono</pauthor>
 </em>
-<br>In Proc. of Twelfth Annual Conference on Privacy, Security and Trust (PST 2014), pp.224---231, Toronto, Kanada, Jul. 2014.<br>
+<br>In Proc. of 12th Annual Conference on Privacy, Security and Trust (PST 2014), pp.224---231, Toronto, Kanada, Jul. 2014.<br>
 <br>
         
 <strong>
@@ -69,7 +69,7 @@
 <em>
 <pauthor>Yusuke Takamatsu, Yuji Kosuga, and Kenji Kono</pauthor>
 </em>
-<br>In Proc. of Tenth Annual Conference on Privacy, Security and Trust (PST 2012), pp.112--119, Paris, France, Jul. 2012.<br>
+<br>In Proc. of 10th Annual Conference on Privacy, Security and Trust (PST 2012), pp.112--119, Paris, France, Jul. 2012.<br>
 <br>
 
 <strong>
