--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <em>
 <pauthor>Yusuke Takamatsu, Yuji Kosuga, and Kenji Kono</pauthor>
 </em>
-<br>In Proc. of the 19th international conference on World Wide Web (POSTER SESSION in WWW 2010) , pp.1191--1192,<br> 
+<br>In Proc. of 19th international conference on World Wide Web (POSTER SESSION in WWW 2010) , pp.1191--1192,<br> 
     Raleigh, NC, USA, Apr. 2010.<br>
 <br>
 
