--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </strong>
 <br>
 <em>
-<pauthor>Yusuke Takamatsu and Kenji Kono</pauthor>
+<pauthor><u>Yusuke Takamatsu</u> and Kenji Kono</pauthor>
 </em>
 <br>In Proc. of 12th Annual Conference on Privacy, Security and Trust (PST 2014), pp.224---231, Toronto, Kanada, Jul. 2014.<br>
 <br>
