--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </strong>
 <br>
 <em>
-<pauthor>Yusuke Takamatsu, Yuji Kosuga, and Kenji Kono</pauthor>
+<pauthor><u>Yusuke Takamatsu</u>, Yuji Kosuga, and Kenji Kono</pauthor>
 </em>
 <br>In Proc. of 10th Annual Conference on Privacy, Security and Trust (PST 2012), pp.112--119, Paris, France, Jul. 2012.<br>
 <br>
@@ -77,7 +77,7 @@
 </strong>
 <br>
 <em>
-<pauthor>Yusuke Takamatsu, Yuji Kosuga, and Kenji Kono</pauthor>
+<pauthor><u>Yusuke Takamatsu</u>, Yuji Kosuga, and Kenji Kono</pauthor>
 </em>
 <br>In Proc. of 19th international conference on World Wide Web (POSTER SESSION in WWW 2010) , pp.1191--1192,<br> 
     Raleigh, NC, USA, Apr. 2010.<br>
@@ -98,7 +98,7 @@
 </strong>
 <br>
 <em>
-<pauthor>Yusuke Takamatsu, Yuji Kosuga, and Kenji Kono</pauthor>
+<pauthor><u>Yusuke Takamatsu</u>, Yuji Kosuga, and Kenji Kono</pauthor>
 </em>
 <br>IPSJ Trans. on Advanced Computing Systems (ACS 41), Vol.6, No.1, pp.45--55, Jan. 2013.<br>
  <br>
@@ -118,7 +118,7 @@
 </strong>
 <br>
 <em>
-<pauthor>高松 勇輔, 河野 健二</pauthor>
+<pauthor><u>高松 勇輔</u>, 河野 健二</pauthor>
 </em>
 <br>ディペンダブルシステムワークショップ(DSW), Atami, Japan, Dec. 2013.<br>
  <br>
@@ -128,7 +128,7 @@
 </strong>
 <br>
 <em>
-<pauthor>高松 勇輔, 河野 健二</pauthor>
+<pauthor><u>高松 勇輔</u>, 河野 健二</pauthor>
 </em>
 <br>In IPSJ Technical Report, 2013-OS-124, Okayama, Japan, Feb. 2013.<br>
  <br>
@@ -138,7 +138,7 @@
 </strong>
 <br>
 <em>
-<pauthor>高松 勇輔, 小菅 祐史, 河野 健二</pauthor>
+<pauthor><u>高松 勇輔</u>, 小菅 祐史, 河野 健二</pauthor>
 </em>
 <br>In Proceedings of the 14th Computer Security Symposium (CSS 2011), Niigata, Japan, Oct. 2011.<br>
  <br>
@@ -148,7 +148,7 @@
 </strong>
 <br>
 <em>
-<pauthor>高松 勇輔, 小菅 祐史, 河野 健二</pauthor>
+<pauthor><u>高松 勇輔</u>, 小菅 祐史, 河野 健二</pauthor>
 </em>
 <br>In IPSJ Technical Report (SWoPP 2011), 2011-OS-118, Kagoshima, Japan, Jul. 2011.<br>
 <br>
