--- a/index.html
+++ b/index.html
@@ -40,6 +40,17 @@
 </td></tr>
 
 <tr><td>
+<div class="section clearfix">
+  <h2 align="center">Interests</h2>
+  <div>
+  	Cross-Site Request Forgery (CSRF), Clickjacking, Cross-Site Scripting (XSS), Session Fixation.
+  </div>
+</div>
+
+<hr>
+</td></tr>
+
+<tr><td>
 <div align="center">
 <h2>Publications</h2>
 </div>
