--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <div class="section clearfix">
   <h2 align="center">Interests</h2>
   <div>
-  	Web security: Cross-Site Request Forgery (CSRF), Clickjacking, Cross-Site Scripting (XSS), Session Fixation
+  	Web attack: Cross-Site Request Forgery (CSRF), Clickjacking, Cross-Site Scripting (XSS), Session Fixation
   </div>
 </div>
 
