--- a/index.html
+++ b/index.html
@@ -125,6 +125,16 @@
 <p>
 
 <strong>
+<ptitle>Detection of Visual Clickjacking Vulnerabilities in Incomplete Defenses</ptitle>
+</strong>
+<br>
+<em>
+<pauthor><u>Yusuke Takamatsu</u>, Kenji Kono</pauthor>
+</em>
+<br>コンピュータシステム・シンポジウム(ComSys), Tokyo, Japan, Nov. 2014.<br>
+ <br>
+
+<strong>
 <ptitle>ウェブアプリケーションの開発時における clickjacking 脆弱性の自動検査手法</ptitle>
 </strong>
 <br>
