--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 <em>
 <pauthor><u>高松 勇輔</u>, 河野 健二</pauthor>
 </em>
-<br>ディペンダブルシステムワークショップ(DSW), Atami, Japan, Dec. 2013.<br>
+<br>ディペンダブルシステムワークショップ(DSW), shizuoka, Japan, Dec. 2013.<br>
  <br>
 
 <strong>
